# spec_mp_bdk2_script

./: .gitignore  README.md  backend.py  ekb_list_generator.py  frontend.py  main.py  pyproject.toml  spec_path_config.yaml
Example/: список паспартов 28П23.xlsx
Шаблон МК и МП/: ЮМП_250_212_045_07_МК_Модуль_коммутатора.vsd  ЮМП_250_212_045_07_МП_Модуль_коммутатора.vsd
